--- a/src/css/main.css
+++ b/src/css/main.css
@@ -53,22 +53,30 @@
     position: absolute;
     right: 16px;
     top: 14px; }
-  /* line 111, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 112, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper-top.responsive button {
     float: none;
     display: block;
     text-align: left; } }
 
 /* line 119, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+div.responsive {
+  -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -ms-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease; }
+
+/* line 127, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); }
 
-/* line 123, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 131, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .test-wrapper {
   transform: translate(0, 0);
   -webkit-transform: translate(0, 0); }
 
-/* line 128, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 136, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .react-logo {
   animation: react-logo-spin infinite 15s linear;
   height: 50px;
@@ -76,7 +84,7 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 136, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 144, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .touch {
   height: 37px;
   margin: auto;
@@ -84,14 +92,14 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 144, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 152, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-container {
   display: flex;
   -webkit-display: flex;
   flex-wrap: wrap;
   -webkit-flex-wrap: wrap; }
 
-/* line 151, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 159, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card {
   margin-bottom: 10px;
   position: relative;
@@ -103,7 +111,7 @@ body {
   background: #fff;
   -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
   box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
-  /* line 163, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 171, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front, .card .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -116,7 +124,7 @@ body {
     -webkit-display: flex;
     align-content: space-around;
     justify-content: center; }
-  /* line 174, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 182, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front {
     transform: rotatey(-180deg);
     -webkit-transform: rotatey(-180deg);
@@ -131,18 +139,18 @@ body {
     width: 100%;
     animation-name: cardenter;
     animation-fill-mode: forwards; }
-  /* line 186, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 194, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .back {
     z-index: 3;
     width: 100%;
     height: 100%;
     background-image: url("../images/card-back.png");
     background-size: 100% 100%; }
-    /* line 192, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 200, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .card .back:hover {
       cursor: pointer; }
 
-/* line 198, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 206, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .flipit {
   transform: rotatey(-180deg);
   -webkit-transform: rotatey(-180deg);
@@ -157,14 +165,14 @@ body {
   animation: cardenter .5s;
   -webkit-animation: cardenter .5s; }
 
-/* line 205, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 213, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .front > p {
   padding: auto;
   margin: auto;
   font: 80px/160px Georgia, Times New Roman, serif;
   position: absolute; }
 
-/* line 224, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 232, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .page-header {
   margin: 0;
   margin-bottom: 10px;
@@ -173,12 +181,12 @@ body {
   padding-top: 10px;
   height: 5em;
   box-shadow: 1px 1px 2px black; }
-  /* line 233, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 241, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .page-header h1 {
     margin: 0;
     padding: 0; }
 
-/* line 239, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 247, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #button-group {
   min-width: 130px;
   position: fixed;
@@ -187,12 +195,12 @@ body {
   left: auto;
   z-index: 30; }
 
-/* line 248, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 256, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .score-text {
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
   color: #e60a0a; }
 
-/* line 253, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 261, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #custom-button {
   border-radius: 3px;
   border: 1px solid transparent;
@@ -200,10 +208,10 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100px; }
-  /* line 260, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 268, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:disabled {
     opacity: .4; }
-  /* line 263, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 271, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:hover {
     transition: 0.2s;
     -webkit-transition: 0.2s;
@@ -212,7 +220,7 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.7); }
 
 /* SIDE NAV */
-/* line 271, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 279, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .sidenav-button-a {
   background: rgba(214, 32, 38, 0.8);
   border-top-right-radius: 5px;
@@ -260,7 +268,7 @@ body {
   to {
     visibility: visible; } }
 
-/* line 333, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 341, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .nav-wrapper {
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
   color: white;
@@ -271,7 +279,7 @@ body {
   transition: 2s ease-out;
   z-index: 500;
   text-align: center; }
-  /* line 344, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 352, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu {
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-top-right-radius: 5px;
@@ -282,18 +290,18 @@ body {
     animation-duration: 1s;
     animation-fill-mode: forwards;
     text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4); }
-    /* line 352, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 360, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper .nav-menu .menu-items {
       text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
       animation-name: showItems;
       animation-delay: .9s;
       animation-duration: .1s;
       animation-fill-mode: forwards; }
-      /* line 359, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+      /* line 367, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
       .nav-wrapper .nav-menu .menu-items ol {
         list-style-position: inside;
         padding: 5px; }
-  /* line 366, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 374, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu-closed {
     background: linear-gradient(to left, rgba(188, 3, 9, 0.7), rgba(214, 32, 38, 0.7), rgba(142, 9, 14, 0.7));
     animation-name: slideIn;
@@ -303,18 +311,18 @@ body {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 2px; }
-  /* line 374, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 382, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .menu-items {
     visibility: hidden; }
 
 /* CARD IMAGES */
-/* line 381, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 389, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-wrapper {
   width: 213px;
   height: 268px;
   display: inline-block; }
 
-/* line 388, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 396, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -326,14 +334,14 @@ body {
   transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 400, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 408, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread {
   margin-top: 20px;
   width: 250px;
   height: 250px;
   position: relative; }
 
-/* line 407, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 415, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -344,7 +352,7 @@ body {
   -ms-transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 420, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 428, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(1) {
   right: 100px;
   top: 10px;
@@ -355,7 +363,7 @@ body {
   transform: rotate(-30deg);
   transition: .5s; }
 
-/* line 434, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 442, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2) {
   left: 50px;
   -webkit-transform: rotate(10deg);
@@ -365,7 +373,7 @@ body {
   transform: rotate(10deg);
   transition: .5s; }
 
-/* line 445, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 453, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2):last-child {
   left: 100px;
   -webkit-transform: rotate(30deg);
@@ -375,7 +383,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 455, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 463, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(3) {
   left: 200px;
   top: 10px;
@@ -386,7 +394,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 466, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 474, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(4) {
   left: 80px;
   top: 20px;
@@ -397,7 +405,7 @@ body {
   transform: rotate(50deg);
   transition: .5s; }
 
-/* line 477, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 485, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(5) {
   left: 100px;
   top: 30px;
@@ -408,47 +416,47 @@ body {
   transform: rotate(70deg);
   transition: .5s; }
 
-/* line 522, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 530, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card .fanned {
   -webkit-box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4); }
 
-/* line 527, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 535, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: #00a651; }
 
-/* line 551, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 559, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitdiamonds:before, .suitdiamonds:after {
   content: "♦";
   color: #ff0000;
   position: absolute; }
 
-/* line 557, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 565, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suithearts:before, .suithearts:after {
   content: "♥";
   color: #ff0000;
   position: absolute; }
 
-/* line 563, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 571, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitclubs:before, .suitclubs:after {
   content: "♣";
   color: #000;
   position: absolute; }
 
-/* line 569, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 577, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitspades:before, .suitspades:after {
   content: "♠";
   color: #000;
   position: absolute; }
 
-/* line 575, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 583, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:before {
   position: absolute;
   font-size: 35px;
   left: 5px;
   top: 5px; }
 
-/* line 582, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 590, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:after {
   position: absolute;
   font-size: 35px;
@@ -471,17 +479,17 @@ div[class*='suit']:after {
   100% {
     color: black; } }
 
-/* line 614, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 622, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .winner {
   animation: winner .2s;
   animation-iteration-count: 5; }
 
-/* line 619, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 627, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .loser {
   animation: loser 2s; }
 
 /* NAVBAR */
-/* line 627, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 635, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .nav-wrapper-top {
   opacity: .8;
   width: 100%;
@@ -495,11 +503,11 @@ div[class*='suit']:after {
   box-shadow: 0px 1px 1px black;
   text-align: center;
   display: block; }
-  /* line 642, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 650, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper-top .icon {
     float: right;
     display: none; }
-  /* line 649, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 657, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper-top button {
     float: left;
     display: block;
@@ -511,10 +519,10 @@ div[class*='suit']:after {
     color: white;
     background: none;
     border: none; }
-    /* line 661, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 669, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper-top button:disabled {
       color: gray; }
-    /* line 665, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 673, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper-top button:hover {
       -webkit-mask-image: -webkit-linear-gradient(top, black, rgba(0, 0, 0, 0.5) 50%, black);
       -webkit-mask-image: linear-gradient(top, black, rgba(0, 0, 0, 0.5) 50%, black);
@@ -523,7 +531,7 @@ div[class*='suit']:after {
       -moz-transition: 0.2s;
       -o-transition: 0.2s; }
 
-/* line 677, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 685, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #footer {
   width: 100%;
   padding: 2em;
@@ -538,7 +546,7 @@ div[class*='suit']:after {
   text-align: center;
   z-index: 30; }
 
-/* line 692, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 700, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #dropdown-btn {
   color: black;
   opacity: .7;
@@ -546,6 +554,6 @@ div[class*='suit']:after {
   top: 0;
   padding: 10; }
 
-/* line 704, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 712, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   padding-bottom: 100px; }
