--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -104,6 +104,7 @@ $text-shadow: -1px 1px 1px rgba(0, 0, 0, .4);
 @media screen and (max-width: 600px) {
   .nav-wrapper-top.responsive {position: relative;}
   .nav-wrapper-top.responsive button.icon {
+
     position: absolute;
     right: 16px;
     top: 14px;
@@ -115,6 +116,13 @@ $text-shadow: -1px 1px 1px rgba(0, 0, 0, .4);
   }
 }
 
+div.responsive {
+	  -webkit-transition: all .25s ease;
+       -moz-transition: all .25s ease;
+        -ms-transition: all .25s ease;
+         -o-transition: all .25s ease;
+            transition: all .25s ease;
+}
 
 body {
 	background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
